# content-archiver-telegram

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh
specs/: telegram-interface-spec.md
src/content_archiver_telegram/: capture_workspace.py  cli.py  config.py  git_push.py  incoming.py  kiro_runner.py  mcp_client.py  mcp_server.py  mcp_tools.py  preprocessor.py  search.py  telegram_bot.py  workflows.py
tests/: test_capture_workspace.py  test_cli.py  test_config.py  test_docker_runtime_deps.py  test_git_push.py  test_kiro_runner.py  test_mcp_client.py  test_mcp_server.py  test_mcp_tools.py  test_preprocessor.py  test_search.py  test_telegram_bot.py  test_workflows.py
