[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "content-archiver-telegram"
version = "0.1.0"
description = "Telegram ingress for a Kiro-operated content archive repository."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Giuseppe Battista", email = "giusedroid@gmail.com" }]
dependencies = [
  "python-telegram-bot>=21.0",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[project.scripts]
content-archiver-telegram = "content_archiver_telegram.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/content_archiver_telegram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
