[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "content-archiver-telegram"
version = "0.1.0"
description = "Telegram ingress for a Kiro-operated content archive repository."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Giuseppe Battista", email = "giusedroid@gmail.com" }]
dependencies = [
  # Archive-owned MCP tool runtime dependencies. The Docker image installs these so
  # mounted archive repo tools can run without syncing dependencies inside the archive.
  "boto3>=1.34",
  "lancedb>=0.12",
  "markitdown>=0.1",
  "mcp>=1.9",
  "openai>=1.40",
  "pillow>=10.0",
  "pyyaml>=6.0",
  "requests>=2.31",
  # Telegram ingress dependencies.
  "python-telegram-bot>=21.0",
  "typer>=0.12",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[project.scripts]
content-archiver-telegram = "content_archiver_telegram.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/content_archiver_telegram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
